# DIPT-equipment-inventory

./: README.md  data_17_JAN_2025.json  data_dump_31_DEC_2024.json  docker-compose.yml  pyproject.toml
app/: Dockerfile  entrypoint copy.sh  entrypoint.dev.sh  entrypoint.sh  monthly_reports.dev.sh  requirements.txt
app/cf/: settings.py  urls.py
app/computers/: admin.py  forms.py  models.py  urls.py  views.py
app/computers/migrations/: 0001_initial.py  0002_alter_computermodel_processor.py  0002_initial.py  0003_computer_department_computer_location_computer_os_and_more.py  0003_rename_comments_microsoftofficeinstalled_notes_and_more.py  0004_alter_computer_os.py  0004_delete_microsoftofficeinstalled.py  0005_alter_microsoftoffice_product_key.py  0005_computermodel_notes_alter_computer_date_installed_and_more.py  0006_alter_microsoftoffice_product_key.py  0009_computer_slug.py  (+24 more)
app/knowledge_base/: models.py  urls.py  views.py
app/notices/: admin.py  forms.py  models.py  urls.py  views.py
app/officekeys/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/printers/: admin.py  forms.py  models.py  urls.py  views.py
app/reports/: urls.py  views.py
app/stocks/: admin.py  forms.py  models.py  urls.py  views.py
app/templates/: 404.html  500.html  base.html  footer.html  messages.html  nav copy 2.html  nav copy.html  nav.html
app/tickets/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
app/users/: admin.py  backends.py  forms.py  models.py  tasks.py  urls.py  user_permission.py  views.py
nginx/: nginx.conf
(+253 files in other folders)
